--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Easy Whatsapp</title>
 </head>
 <body>
-    <form>
+    <form action="#">
         <label for="num">Contact Number</label>
         <input type="number" id="num">
         <button onclick="createLink()">Create Link</button>
