Changes form tag to div

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Easy Whatsapp</title>
 </head>
 <body>
-    <form action="#">
+    <div>
         <label for="num">Contact Number</label>
         <input type="number" id="num">
         <button onclick="createLink()">Create Link</button>
-    </form>
+    </div>
 
     <p style="visibility: hidden;"><a id="redirect" href="#"><button>Click here</button></a></p>
 
