adjust y-axis spacing

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <!-- </Header> -->
     
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5 ">
-      <div class="row align-items-center g-lg-5 py-5">
+    <div class="container col-xl-10 col-xxl-8 px-4 ">
+      <div class="row align-items-center g-lg-5 py-2">
         <div class="col-lg-7 text-center text-lg-start">
           <h1 class="display-4 fw-bold lh-1 mb-3">Whatsapp Without Saving Contact</h1>
           <p class="col-lg-10 fs-4">Ever felt the need to text someone on Whatsapp without adding a new contact? <br> Just type in the mobile number here without the country code prefix and click create link to start texting!
